# CelestiNavX

./: .replit  README.md  auth.py  camera.html  database_models.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  replit.md  results.html  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src/components/: BottomNavigation.tsx  QueryProvider.tsx  ThemeToggle.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useAuth.ts  useDatabase.ts
src/pages/: AIPage.tsx  CelestiNavPage.tsx  HomePage.tsx  LandingPage.tsx  RadarPage.tsx  SOSPage.tsx  WeatherPage.tsx
src/services/: api.ts  database.ts  weatherAI.ts
